# CurvedVideoRenderer

./: .gitignore  CMakeLists.txt  README.md  build.bat
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: gl.h
shaders/: horizontally_flipped_texture.frag  test.vert
src/: curved_video_player.hpp  frame.hpp  glfw_context.cpp  glfw_context.hpp  image.hpp  image_renderer.cpp  image_renderer.hpp  load_frame.hpp  main.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  perspective_camera.cpp  perspective_camera.hpp  types.hpp  vertex.hpp  video_reader.cpp  video_reader.hpp  window.cpp  window.hpp
